Routing and new theme

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-nav></app-nav>
 
-<div class="container app-column app-mt-xxl">
-  <app-home></app-home>
+<div class="container app-column container_margin-top">
+  <router-outlet></router-outlet>
 </div>
