--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -1,6 +1,6 @@
 <div class="card app-mb-sm">
   <div class="card-img-wrapper">
-    <img class="card-img-top" src="{{ member().photoUrl }}" alt="{{ member().knownAs }}">
+    <img class="card-img-top" [src]="member()?.photoUrl || '../../../assets/user.png'" [alt]="member()?.knownAs">
     <ul class="list-inline member-icons animate app-ta-center">
       <li class="list-inline-item">
         <button routerLink="/members/{{ member().userName }}" class="btn btn-primary"><i class="fa fa-user"></i></button>
