--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -3,7 +3,7 @@
     <div class="col-4">
       <div class="card">
         <img
-          src="{{ member.photoUrl  || '.assets/user.png' }}"
+          [src]="member.photoUrl  || '../../../assets/user.png'"
           alt="{{ member.knownAs }}"
           class="card-img img-thumbnail"
         >
@@ -46,8 +46,14 @@
           <h4>Interests</h4>
           <p>{{ member.interests }}</p>
         </tab>
-        <tab heading="Photos">
-          <p>Photos will go here</p>
+        <tab heading="Photos" #photoTab="tab">
+          @if (photoTab.active) {
+            <gallery
+              [items]="images"
+              thumbPosition="left"
+              class="gallery"
+            ></gallery>
+          }
         </tab>
         <tab heading="Messages">
           <p>Messages will go here</p>
