--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,3 +1,7 @@
+<ngx-spinner>
+  <h3>Loading...</h3>
+</ngx-spinner>
+
 <app-nav></app-nav>
 
 <div class="container app-column container_margin-top">
