Update user's main photo

--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -50,7 +50,7 @@
           @if (photoTab.active) {
             <gallery
               [items]="images"
-              thumbPosition="left"
+              [itemAutosize]="true"
               class="gallery"
             ></gallery>
           }
