--- a/client/src/app/members/photo-editor/photo-editor.component.html
+++ b/client/src/app/members/photo-editor/photo-editor.component.html
@@ -3,7 +3,14 @@
     <div class="col-2">
       <img src="{{ photo.url }}" alt="photo of user" class="img-thumbnail mb-1">
       <div class="text-center">
-        <button class="btn bt-sm">Main</button>
+        <button
+          class="btn bt-sm app-mr-xs"
+          [disabled]="photo.isMain"
+          (click)="setMainPhoto(photo)"
+          [ngClass]="photo.isMain ? 'btn-success active' : 'btn-outline-success'"
+        >
+          Main
+        </button>
         <button class="btn bt-sm btn-danger"><i class="fa fa-trash"></i></button>
       </div>
     </div>
@@ -44,25 +51,27 @@
       </tbody>
     </table>
 
-    <div>
+    <div class="row app-rg-sm">
       <div>
         Queue progress:
         <div class="progress">
           <div class="progress-bar" role="progressbar" [ngStyle]="{ 'width': uploader?.progress + '%' }"></div>
         </div>
       </div>
-      <button type="button" class="btn btn-success btn-s"
-            (click)="uploader?.uploadAll()" [disabled]="!uploader?.getNotUploadedItems()?.length">
-        <span class="fa fa-cloud-upload"></span> Upload all
-      </button>
-      <button type="button" class="btn btn-warning btn-s"
-            (click)="uploader?.cancelAll()" [disabled]="!uploader?.isUploading">
-        <span class="fa fa-ban"></span> Cancel all
-      </button>
-      <button type="button" class="btn btn-danger btn-s"
-            (click)="uploader?.clearQueue()" [disabled]="!uploader?.queue?.length">
-        <span class="fa fa-trash"></span> Remove all
-      </button>
+      <div class="app-row app-cg-xs">
+        <button type="button" class="btn btn-success btn-s"
+              (click)="uploader?.uploadAll()" [disabled]="!uploader?.getNotUploadedItems()?.length">
+          <span class="fa fa-cloud-upload"></span> Upload all
+        </button>
+        <button type="button" class="btn btn-warning btn-s"
+              (click)="uploader?.cancelAll()" [disabled]="!uploader?.isUploading">
+          <span class="fa fa-ban"></span> Cancel all
+        </button>
+        <button type="button" class="btn btn-danger btn-s"
+              (click)="uploader?.clearQueue()" [disabled]="!uploader?.queue?.length">
+          <span class="fa fa-trash"></span> Remove all
+        </button>
+      </div>
     </div>
   </div>
 </div>
