--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,30 +1,69 @@
-<form #registerForm="ngForm" (ngSubmit)="register()" autocomplete="off">
+<form [formGroup]="registerForm" (ngSubmit)="register()" autocomplete="off">
   <h2 class="app-ta-center text-primary">Sign up</h2>
   <hr>
-  <div class="app-mb-sm form-floating">
-    <input
-      type="text"
-      class="form-control"
-      name="username"
-      [(ngModel)]="model.username"
-      placeholder="Username"
-    >
-    <label>Username</label>
+
+  <div class="mb-3">
+    <div class="app-row main-axis-alignment_center app-cg-xs">
+      <label style="margin-right: 10px;">I am a:</label>
+      <label class="form-check-label">
+        <input type="radio" class="form-check-input" value="male" formControlName="gender"> Male
+      </label>
+      <label class="form-check-label">
+        <input type="radio" class="form-check-input" value="female" formControlName="gender"> Female
+      </label>
+    </div>
   </div>
 
-  <div class="app-mb-sm form-floating">
-    <input
-      type="password"
-      class="form-control"
-      name="password"
-      [(ngModel)]="model.password"
-      placeholder="Password"
-    >
-    <label>Password</label>
-  </div>
+  <app-text-input
+    [formControl]="$any(registerForm.controls['username'])"
+    [label]="'Username'"
+  ></app-text-input>
+
+  <app-text-input
+    [formControl]="$any(registerForm.controls['knownAs'])"
+    [label]="'Known as'"
+  ></app-text-input>
+
+  <app-date-picker
+    [formControl]="$any(registerForm.controls['dateOfBirth'])"
+    [label]="'Date of birth'"
+    [maxDate]="maxDate"
+  ></app-date-picker>
+
+  <app-text-input
+    [formControl]="$any(registerForm.controls['city'])"
+    [label]="'City'"
+  ></app-text-input>
+
+  <app-text-input
+    [formControl]="$any(registerForm.controls['country'])"
+    [label]="'Country'"
+  ></app-text-input>
+
+  <app-text-input
+    [formControl]="$any(registerForm.controls['password'])"
+    [label]="'Password'"
+    [type]="'password'"
+  ></app-text-input>
+
+  <app-text-input
+    [formControl]="$any(registerForm.controls['confirmPassword'])"
+    [label]="'Confirm password'"
+    [type]="'password'"
+  ></app-text-input>
+
+  @if (validationErrors) {
+    <div class="alert alert-danger app-ta-start">
+      <ul>
+        @for (error of validationErrors; track $index) {
+          <li>{{ error }}</li>
+        }
+      </ul>
+    </div>
+  }
 
   <div class="form-group app-ta-center">
-    <button class="btn btn-success me-2" type="submit">Register</button>
+    <button [disabled]="registerForm.invalid" class="btn btn-success me-2" type="submit">Register</button>
     <button class="btn btn-default me-2" (click)="cancel()" type="button">Cancel</button>
   </div>
 </form>
